test/files/neg/t1041.check
t1041.scala:3: error: type mismatch;
 found   : Int(1)
 required: List[Int]
    case 1 => 4
         ^
1 error
